--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2605,107 +2605,107 @@ stories:
   domain: http://www.elynews.com/
   link: https://elynews.com/2019/06/28/letter-to-the-editor-7/
 images:
-- name: old-door-lock-old-door-lock-2-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-smooth-ride.jpg
-- name: school-clouds-church-clouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-umberto-bocc.jpg
-- name: mistywoods-babyfoot-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
-- name: oldhousecars-house-old-cars-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-aqua.jpg
-- name: powerlines-power-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alberto-giacometti.jpg
-- name: aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-wols.jpg
-- name: aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
-- name: mediterranean-mediterranean-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-emily-carr.jpg
-- name: 35201856153_61bc075e4b-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: adam-smith-adam-smith-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-electricity.jpg
-- name: downtheline-downtheline-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-far-away.jpg
-- name: bordercrossing-bordercrossing-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-post-modern.jpg
-- name: adam-smith-adam-smith-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-matrix.jpg
-- name: oldcabin-oldcabin-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-really-hot.jpg
-- name: oldcabin-store-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-- name: statue-of-liberty-front-view-statueofliberty-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crabapple.jpg
-- name: adam-smith-adam-smith-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
-- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-- name: legal-statue-legalstatue-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-storm.jpg
-- name: dc-statue-dcstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-electricity.jpg
-- name: razorcliff-razorcliff-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-electricity.jpg
-- name: oldcabin-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-diego-rivera1.jpg
-- name: white-house-lawn-white-house-lawn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
-- name: white-house-lawn-white-house-lawn-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-two.jpg
-- name: stories-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-blue-circuit-5.jpg
-- name: ellis-island-ellisisland-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-umberto-bocc.jpg
-- name: carry-load-carryload-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-neo-instinct.jpg
-- name: fence-fence-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-hot-spicy.jpg
-- name: berlinwall-DSC-0084-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-green-zuma.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-- name: lincoln-memorial-lincolnmemorial-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dry-skin.jpg
-- name: wind-mills-windmills-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
-- name: catacombs-catacombs-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-1200.jpg
-- name: containership-containership-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-missle.jpg
-- name: white-house-whitehouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-asteroids.jpg
-- name: amusement-park-amusement-park-2-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-mucha-mult.jpg
-- name: oldcabin-store-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
-- name: crow-crow-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
-- name: hollywood-building-hollywood-building-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
-- name: oldtrain-oldtrain-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-propaganda-leaflets.jpg
-- name: old-house-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-aqua.jpg
-- name: rockingchair-rockingchair-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-aqua.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-- name: san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+- name: castle-wall-DSC-0067-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-plentiful.JPG
+- name: oldhotel-oldhotel-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-three.jpg
+- name: containership-containership-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+- name: death-valley-death-valley-national-park-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crafty-painting.jpg
+- name: fence-fence-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-pond.jpg
+- name: art-museum-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-dali.jpg
+- name: crow-crow-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
+- name: gypsy-wagon-gypsywagon-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-really-hot.jpg
+- name: scream-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8494.jpg
+- name: nyc-flag-nycflag-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
+- name: walled-garden-walled-garden-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-constitution.jpg
+- name: stories-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-dark-dali.jpg
+- name: oldcabin-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smooth-ride.jpg
+- name: oldcabin-store-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-brush.jpg
 - name: adam-smith-adam-smith-yellow-collage.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-collage.jpg
+- name: oldcabin-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-rain.jpg
+- name: downtheline-downtheline-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-monet-one.jpg
+- name: window-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
+- name: hollywood-building-hollywood-building-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-free-woman.jpg
+- name: windowmountain-window-mountain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-soul.jpg
+- name: status-berlin-status-berlin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-rainbow-festival.jpg
+- name: window-window-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-mucha-mult.jpg
+- name: oldbarn-oldbarn-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crafty-painting.jpg
+- name: downtown-trucksilo-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-graham-sutherland.jpg
+- name: razorcliff-razorcliff-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-gan-vogh.jpg
+- name: death-valley-death-valley-national-park-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-nazi-poster.jpg
+- name: cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: stories-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
+- name: stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
+- name: paris-paris-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dry-skin.jpg
+- name: curtain-curtain-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-electricity.jpg
+- name: beach-rocks-beach-rocks-currents-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-spagetti-accident.jpg
+- name: downtown-los-angeles-downtown-la-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kand-two.JPG
+- name: curtain-curtain-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-space-pizza.jpg
+- name: paris-paris-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-aqua.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+- name: christianity-christianity-under-construction-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-satan-red.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: nazi-invasion-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0115.jpg
+- name: old-house-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-post-modern.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-ww2-color.JPG
+- name: oldhotel-oldhotel-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kandinsky-bv.jpg
+- name: sand-hand-sand-hand-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
+- name: old-granary-field-granaryfield-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dry-skin.jpg
+- name: server-cloud-server-racks-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smoking-cigarette.jpg
+- name: bluelake-far-away-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-00-00.jpg
+- name: nyc-flag-nycflag-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-light-dali.jpg
+- name: razorcliff-razorcliff-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sand-paper.jpg
 ---
 Five Things Happening Around Your State.&nbsp;Kylie Jenner Begs Family Not To Bully Jordyn Woods After Cheating Scandal.&nbsp;Environmentalists Remove Tons Of Plastic In Pacific Ocean.&nbsp;Lynne Cole Simply The Best Realtor.&nbsp;Affordable Housing Project Delayed As Mark Hunt Steps In.&nbsp;Kylie Jenner Begs Family Not To Bully Jordyn Woods After Cheating Scandal.&nbsp;School Resource Officers Attend Secret Service Workshop.&nbsp;Geathers Fights To Hold Onto Starting Safety Spot.&nbsp;
